# ethernet_layer2_testing

./: README.md  ReviewReport_2026May16.md
tc8-l2-test-framework/: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_output.txt
tc8-l2-test-framework/config/: defaults.yaml  questionnaire.yaml  test_tiers.yaml
tc8-l2-test-framework/config/dut_profiles/: 4port_basic_switch.yaml  8port_gateway_advanced.yaml  example_central_gateway_ecu.yaml  example_ecu.yaml  gaim_prof.yaml
tc8-l2-test-framework/data/ext/: ext_mgmt_specs.yaml  ext_oracle_specs.yaml  ext_perf_specs.yaml  ext_phy_specs.yaml
tc8-l2-test-framework/data/spec_definitions/: address_specs.yaml  ext_perf_specs.yaml  ext_tsn_specs.yaml  filtering_qos_config_specs.yaml  general_specs.yaml  vlan_specs.yaml
tc8-l2-test-framework/data/tc8/: address_specs.yaml  vlan_specs.yaml
tc8-l2-test-framework/data/templates/: report_template.html
tc8-l2-test-framework/docs/: PRD.md  index.md  known_limitations.md  user_guide.md
tc8-l2-test-framework/docs/tutorials/: 01_quick_start.md  02_custom_dut_profile.md
tc8-l2-test-framework/reports/: 5b550e52.html  e43e8c15.html  test-vis-002.html
tc8-l2-test-framework/scripts/: setup.ps1  setup.sh
tc8-l2-test-framework/src/: __init__.py  cli.py
tc8-l2-test-framework/src/core/: __init__.py  cli.py  config_manager.py  result_validator.py  session_manager.py  test_runner.py
tc8-l2-test-framework/src/interface/: __init__.py  base_interface.py  base_traffic_gen.py  scapy_dut_controller.py  scapy_interface.py  scapy_traffic_gen.py
tc8-l2-test-framework/src/models/: __init__.py  test_case.py
tc8-l2-test-framework/src/specs/: __init__.py  (+9 more)
tc8-l2-test-framework/tests/: conftest.py  test_hexdump.py  verify_report_viz.py
(+28 files in other folders)
